--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -437,6 +437,7 @@ int a = 3;
 void hello() {}
 </pre>
   <p>В этом коде есть проблема. В языке Си компиляция файлов раздельная. При компиляции main() компилятор не знает откуда брать переменную a.</p>
+
   <p>Файл main.cpp</p>
 <pre>
 #include "hello.h"
@@ -449,8 +450,122 @@ int main() {
   <p>Файл hello.h</p>
 <pre>
 #ifndef _h_h_
-int a = 3;
+extern int a = 3;
 void hello() {}
 #endif
-</pre
+</pre>
+
+  <p>Файл hello.cpp</p>
+<pre>
+a = 3;
+void hello() {}
+</pre>
+
+  <p>Не хорошо использовать глобальные переменные. Возникает две проблемы. Первая проблема: сложно следить за логикой программы. Вторая проблема: возможны конфликты имен, если глобальные переменные объявлены в разных файлах, в том числе в объектных файлах библиотек.</p>
+
+  <h4>Стек</h4>
+  <p>В стеке хранятся данные, необходимые для работы функции. Когда вызывается новая функия, то выделяется новая память для кадра стека.</p>
+  <p>В кадре стека хранятся входные параметры функции, локальные переменные и адрес возврата из функции. Таким образом стек растет вверх. При рекурсивных вызовах стек может переполниться и программа аварийно завершится. Когда функция заканчивает свою работу, то она освобождает свою память в стеке.</p>
+  <p>Для фукции объем выделяемой памяти в стеке определяется в момент компиляции. Нужно знать объем под параметры и под локальные переменные.</p>
+  <p>Для программы объем выделяемой памяти в стеке на этапе компиляции определить нельзя, потому что мы не знаем сколько раз и как функции будут вызываться в программе.</p>
+
+  <h4>Динамическая память</h4>
+  <p>Динамическая память выделяется в момент работы программы. Если объем данных заранее неизвесен, например вводится с клавиатуры, поступает из сети, вводится из файла, то память под такие данные нужно выделять динамически.</p>
+  <p>Динамическая память выделается и освобождается с помощью функций операционной системы из библиотеки stdlib.h.</p>
+  <p>Выделим динамическую память для хранения 10000 элементов типа int (40000 байт) и запишем указатель на эту память в переменную p.</p>
+  <code>int *p = malloc(10000 * sizeof(int));</code>
+  <p>Теперь к элеменам этой памяти можно обращаться как к элементам массива</p>
+  <code>int a = p[0]; int b = p[9999];</code>
+  <p>Когда работа с выделенной памятью закончена и эти 10000 элементов нам не нужны, то память нужно освободить.</p>
+  <code>free(p);</code>
+  <p>Сигнатура вызова функции malloc()</p>
+  <code>void *malloc(size_t size);</code>
+  <p>Причем тип данных size_t опрделяется как</p>
+  <code>typedef unsigned int size_t;</code>
+  <p>Функция malloc() возвращает указатель на void</p>
+  <p>В языке Си произойдет неявное приведение типов.</p>
+  <code>int *p = malloc(10000 * sizeof(int));</code>
+  <p>В языке C++ нужно явно приводить указатель на void к указателю на нужный тип данных.</p>
+  <code>int *p = (int *)malloc(10000 * sizeof(int));</code>
+
+  <p>Проблемы динамической памяти</p>
+  <ol>
+    <li>Выход за границы. Программист должен следить, чтобы программа не могла обратиться за границы динамической памяти.</li>
+    <li>Утечка памяти (memory leak). Программист должен следить, чтобы вся выделенная память затем была освобождена.
+    <code>int *p = malloc(10000 * sizeof(int));</code>
+    <code>p = malloc(10 * sizeof(int));</code>
+    <p>Указатель p показывает только на вторую область памяти из 40 байт. К первой области памяти в 40000 байт нет доступа и ее невозможно освободить, так как на нее не указывает ни один указатель.</p>
+    <p>После завершения работы программы операционная система сама автоматически очищает всю выделенную в этой программе динамическую память. Поэтому, если это небольшая программа, которой требуется мало памяти то это ни к чему страшному не приведет. Другое дело если это сервер, который работает без перерыва. При утечках памяти, сначала у него закончится вся оперативная память и тогда операционная система чтобы освободить ее будет скидывать данные из оперативной памяти в файл подкачки, при этом сервер и все остальные программы запущенные на этом компьютере начнут тормозить.</p>
+    <p>При эволюции языков программирования, в языке C# уже нет операции освобождения памяти free(). Это делается автоматически сборщиком мусора, который сканирует оперативную память и сам находит такие участки которые больше никому не нужны.</p>
+    </li>
+    <li>Выделение динамической памяти это самый медленный процесс из трех видов памяти. Операционная система должна просмотреть свои таблицы, чтобы найти в них свободный непрерывный кусок памяти и вернуть указатель на нее.</li>
+    <li>В динамической памяти имеет смысл размещать массивы и объекты большого размера. Если в динамической памяти хранить простую переменную, например
+      <code>int *p = (int *)malloc(4);</code>
+      то она займет 4 байта в динамической памяти, под тип int и еще 4 байта на стеке под указатель на тип int.
+    </li>
+  </ol>
+
+  <h4>Выделение динамической памяти для двумерного массива</h4>
+  <p>Работать с двумерным массивом в динамической памяти можно двумя способами.</p>
+  <p>Первый способ. Выделим динамическую память для матрицы n x n, которая вернет указатель на int.</p>
+  <code>int *M = (int *)malloc(sizeof(int) * n * n);</code>
+  <p>Чтобы обратимся к элементу M[1][2] нужно записать M[1*N+2]. Чтобы обратимся к элементу M[i][j] нужно записать M[i*N+j].</p>
+  <p>Заметим, что первым способом мы один раз обращаемся к функции malloc().</p>
+  <p>Второй способ. Сначала выделим динамическую память для массива указателей размера n, которая вернет указатель на массив указателей типа int*.</p>
+  <code>int **M = (int **)malloc(sizeof(int *) * n);</code>
+  <p>Потом в каждый элемент массива записать указатель на свой массив размера n.</p>
+<pre>
+for (int i = 0; i &lt; n; i++) {
+  M[i] = (int *)malloc(sizeof(int) * n);
+}
+</pre>
+  <p>Чтобы обратимся к элементу M[1][2] нужно записать M[1][2]. Чтобы обратимся к элементу M[i][j] нужно записать M[i][j], то есть мы разыменовываем указатель *(*(M+i)+j).</p>
+  <p>В этом случае, на самом деле, массив не находится весь целиком в непрерывной области памяти. Сначала выделяется непрерывная область памяти для массива указателей. А потом для каждого указателя выделяется непрерывная область под массив типа int.</p>
+
+  <h4>Освобождение динамической памяти для двумерного массива</h4>
+  <p>Сначала нужно освободить память выделенную под каждый внутренний массив, а потом выделенную под указатели.</p>
+  <p>Функция malloc() очень медленная. и нам пришлось n+1 раз выделять память функцией malloc().</p>
+<pre>
+for (int i = 0; i &lt; n; i++) {
+  free(M[i]);
+}
+free(M);
+</pre>
+
+  <h4>Третий способ</h4>
+  <p>Третий способ это выделение памяти функцией malloc() за два обращения. Доступ к элементам массива имеет вид M[i][j].</p>
+  <p>Выделить один массив tmp размером n x n. Выделить второй массив M размером n. В массиве M хранить указатели, которые указывают на адреса из массива tmp, отстоящие друг от друга на размер элемента.</p>
+
+  <h4>Функция calloc()</h4>
+  <p>Функция calloc() работает так же как и функция malloc() с одним отличием. Она заполняет выделенную память нулями. Поэтому работает медленнее.</p>
+
+  <h4>Функция realloc()</h4>
+  <p>Функция realloc() позволяет изменить размер памяти, выделенной динамически с помощью функии malloc() или calloc().</p>
+  <code>int *p = (int*)malloc(sizeof(int)*1000);</code>
+  <code>p = realloc(p, sizeof(int)*10000);</code>
+
+  <p>Каждая из функций malloc, calloc, realloc пытается выделить непрерывную память заданного размера. Если выделить память удается, то в качестве значения возвращается указатель на начало памяти. Если этого сделать не удается, то в качестве значения возвращается NULL. Поэтому после каждой операции выделения памяти необходимо проверять, что она выделилась.</p>
+  <code>if (p == NULL) {}</code>
+
+  <h4>Выделение динамической памяти в языке C++</h4>
+  <p>В C++ для выделения памяти появились два ключевых слова new и delete.</p>
+  <code>int *p = new int [1000];</code>
+  <code>delete [] p;</code>
+  <p>Если в языке Си функции malloc, calloc, realloc принимали в качестве параметра размер памяти, то в языке C++ оператор new требует после себя тип и число элементов.</p>
+  <p>После оператора delete нужны квадратные скобки, чтобы компилятор мог обратиться к ячейке памяти, в которой записан размер массива и правильно рассчитать сколько элементов нужно удалить. Это касается только массивов.</p>
+</article>
+
+
+<!-- Урок 4 -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>Урок 4</h3>
+  <p>Задание: посмотреть как работает malloc. Принципы поиска свободной памяти.</p>
+  <p>Функция free() освобождает память выделенную и под переменную и под массив.</p>
+  <p>Оператор delete освобождает память выделенную под переменную.</p>
+  <p>Оператор delete [] освобождает память выделенную под массив.</p>
+  <p>Оператор delete [] вызывает деструкторы. Для которых нужно знать не только размер массива, но и размеры ячеек из которых он состоит.</p>
+
+  <h4>Стандартная библиотека языка Си libc.</h4>
+  <p>stdio.h это заголовочный файл с сигнатурами функций ввода - вывода. Язык Си писался для операционной системы Unix. В философии Unix заложено что любое устройство это файл. Экран это файл, в который можно писать. Клавиатура это файл, с которого можно читать. Области памяти на жестком диске это файлы, в которые можно писать и читать.</p>
 </article>
