--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -16,6 +16,11 @@
   <p><a href="#p5">Урок 5</a></p>
   <p><a href="#p6">Урок 6</a></p>
   <p><a href="#p7">Урок 7</a></p>
+  <p><a href="#p8">Урок 8</a></p>
+  <p><a href="#p9">Урок 9</a></p>
+  <p><a href="#p10">Урок 10</a></p>
+  <p><a href="#p11">Урок 11</a></p>
+  <p><a href="#p12">Урок 12</a></p>
 
 </article>
 
@@ -560,6 +565,7 @@ free(M);
 <article class="article">
   <div class="anchor" id="p4"></div>
   <h3>Урок 4</h3>
+
   <p>Задание: посмотреть как работает malloc. Принципы поиска свободной памяти.</p>
   <p>Функция free() освобождает память выделенную и под переменную и под массив.</p>
   <p>Оператор delete освобождает память выделенную под переменную.</p>
@@ -568,4 +574,89 @@ free(M);
 
   <h4>Стандартная библиотека языка Си libc.</h4>
   <p>stdio.h это заголовочный файл с сигнатурами функций ввода - вывода. Язык Си писался для операционной системы Unix. В философии Unix заложено что любое устройство это файл. Экран это файл, в который можно писать. Клавиатура это файл, с которого можно читать. Области памяти на жестком диске это файлы, в которые можно писать и читать.</p>
+
+  <p>Ввод с клавиатуры scanf(). Вывод на экран printf().</p>
+
+  <h4>Работа с файлом</h4>
+  <p>Сначала нужно открыть файл</p>
+  <code>FILE* f = fopen("a.txt", "r");</code>
+  <p>Если файл не открылся, то fopen() возвращает NULL. Всегда нужно проверять открылся ли файл, прежде чем с ним работать</p>
+  <code>if (f == NULL) {}</code>
+  <p>Ввод из файла fscanf(). Вывод в файл fprintf().</p>
+  <p>Поскольку операции чтения и записи в файл медленные, то используется буфер. Перед тем как в файл запишутся байты данных, они сперва накапливаются в буфере. И потом содержимое буфера пишется в файл целиком.</p>
+  <p>Мы не знаем заполнился уже буфер или нет, не знаем сбросил ли он уже байты в файл или нет. Мы можем сами принудительно сбросить байты в файл из буфера командой fflush().</p>
+  <code>fflush(f);</code>
+  <p>После завершения работы с файлом, его нужно закрыть</p>
+  <code>fclose(f);</code>
+  <p>Перед закрытием файла команда fclose сбрасывает оставшиеся байты из буфера в файл.</p>
+
+  <h4>Работа с вводом-выводом</h4>
+  <p>stdin ввод с клавиатуры, stdout вывод на экран, stderr вывод на экран сообщений об ошибках. stderr не имеет буфера.</p>
+  <p>printf("%d",n) это то же самое, что и fprintf(stdout, "%d",n).</p>
+
+  <p>Вывод в файл:</p>
+<pre>
+FILE* f = fopen("a.txt", "w");
+fprintf(f, "...");
+</pre>
+
+  <p>Вывод на экран:</p>
+<pre>
+FILE* f = stdout;
+fprintf(f, "...");
+</pre>
+
+  <h4>Текстовые и двоичные файлы</h4>
+  <p>Отличие текстовых и двоичных файлов в их отображении. Текстовый файл предназначен для чтения человеком. Двоичный файл предназначен для чтения программой. Текстовый файл отображается как набор графических символов из таблицы ASCII. Двоичный файл отображается как набор шестнадцатеричных цифр.</p>
+  <p>Для записи английский букв достаточно первой половины таблицы ASCII от 0 до 127 символа. Вторая половина отдана для национальных алфавитов. Национальные алфавиты записываются в различных кодировках. Русский алфавит записывается кодировкой cp866 в системе MS-DOS, кодировкой CP1251 в Windows, кодировкой koi-8r в Unux.</p>
+  <p>127 символов хватает не для всех алфавитов. Поэтому была предложена кодировка unicode, в которой символ кодируется четырьмя байтами. Правда используются пока только два байта, так как их хватает для всех известных символов. Есть разные способы записи символов unicode в файл. Первый способ UCS-4, когда символ записывается как 4 байта, где первые два это нули. Второй способ UCS-2, когда символ зависывается как 2 байта, без ведущих нулей. Третий способ UTF-8, когда символы кодируются последовательностями разной длины. Для английских букв длина символа 1 байт. Для совместимости с таблицей ASCII, символы из первой половины таблицы ASCII являются корректными в кодировке UTF-8. Для русского и других языков длина символа 2 байта.</p>
+  <p>Для конца строки используются различные символы в различных операционных системах. Linux 10, Mac 13, Windows 1013.</p>
+  <p>Для открытия текстовых файлов в функцию fopen дописывают в второй параметр буку t, для двоичных - буку b. Это влияет только на то как в файле будет записан символ перевода строки '\n'.</p>
+  <p>Попробуем выполнить один и тот же код в Linux, Windows, с файлом открытом в режимах t или b.</p>
+  <code>fprintf(f, "hello\n");</code>
+  <p>В Linux в файл запишется 6 символов в любом режиме t или b.</p>
+  <p>В Windows в режиме t в файл запишется 7 символов. В режиме b запишется 6 символов.</p>
+
+  <h4>Функция fgets()</h4>
+  <p>Считаем из файла a.txt 9 байт в переменную s.</p>
+<pre>
+FILE* f = fopen("a.txt", "tr");
+char s[10];
+fgets(s, 9, f);
+</pre>
+
+  <h4>Функция sscanf()</h4>
+  <p>Считаем из строки в переменную s.</p>
+<pre>
+char s[10];
+sscanf(s, "%d", &n);
+</pre>
+
+  <h4>Функция sprintf()</h4>
+  <p>Функция sprintf() записывает в строку.</p>
+
+  <h4>Функция feof()</h4>
+  <p>Функция feof() определяет конец файла.</p>
+
+  <h4>Работа с двоичными файлами</h4>
+  <p>Функция fread() работает с файлами, открытыми в двоичном формате и имеет прототип:</p>
+  <code>size_t fread(void *ptr, size_t size, size_t n, FILE* f);</code>
+
+  <p>Считаем из файла 100 целых чисел.</p>
+<pre>
+int a[100];
+fread(a, 4, 100, f);
+</pre>
+
+  <p>Функция fwrite() работает с файлами, открытыми в двоичном формате и имеет прототип:</p>
+  <code>size_t fwrite(void *ptr, size_t size, size_t n, FILE* f);</code>
+  <p>Функция fseek() перемещает указатель на номер текущей позиции внутри файла.</p>
+  <p>Функция ftell() возвращает номер текущей позиции.</p>
+</article>
+
+
+<!-- Урок 5 -->
+<article class="article">
+  <div class="anchor" id="p5"></div>
+  <h3>Урок 5</h3>
 </article>
