--- a/src/components/alg/alg-conspect/mifi/pages/elem-m1tp.html
+++ b/src/components/alg/alg-conspect/mifi/pages/elem-m1tp.html
@@ -14,7 +14,7 @@
   <br><a href="#p1">Задача 1. Палиндром</a>
   <br><a href="#p2">Задача 2. Найти два числа с заданной суммой</a>
   <br><a href="#p3">Задача 3. Найти минимальный подмассив с заданной суммой</a>
-  <br><a href="#p4">Задача 4. Найти максимальную подстроку</a>
+  <br><a href="#p4">Задача 4. Найти максимальную подстроку (ЕГЭ)</a>
 </article>
 
 
