--- a/src/components/alg/alg-conspect/mifi/pages/elem-m2dp.html
+++ b/src/components/alg/alg-conspect/mifi/pages/elem-m2dp.html
@@ -13,7 +13,7 @@
       <a href="#p0">Динамическое программирование</a>
   <br><a href="#p1">Задача 1. Числа Фибоначчи</a>
   <br><a href="#p2">Задача 2. Кузнечик</a>
-  <br><a href="#p3">Задача 3. Робот. Максимальная сумма</a>
+  <br><a href="#p3">Задача 3. Робот. Максимальная сумма (ЕГЭ)</a>
   <br><a href="#p4">Задача 4. Робот. Минимальная сумма</a>
 </article>
 
