--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -659,4 +659,276 @@ fread(a, 4, 100, f);
 <article class="article">
   <div class="anchor" id="p5"></div>
   <h3>Урок 5</h3>
+
+  <h4>Заголовочный файл assert.h</h4>
+
+  <h4>Функция assert()</h4>
+  <p>Функция assert() используется при отладке приложения.</p>
+  <p>Пусть мы написали функцию strcmp() в которую нельзя передавать NULL. Функция assert() принимает логическое выражение, если оно не выполняется, то программа аварийно завершается. Эта функция нужна на этапе отладки.</p>
+<pre>
+// пример 1
+strcmp(string s1, string s2) {
+  assert(s1 != NULL);
+}
+</pre>
+  <p>Такие проверки нужны только на этапе тестирования.Когда программа попадет к пользователю, то этих проверок в коде остаться не должно.</p>
+  <p>Будем добавлять в код определение DEBUG, когда нам нужно скомпилировать программу в режиме DEBUG.</p>
+  <code>#define DEBUG</code>
+  <p>Чтобы не добавлять эту строчку, можно запустить компилятор с ключем -D и определить DEBUG</p>
+  <code>gcc -DDEBUG</code>
+<pre>
+// пример 2
+FILE *f = fopen("a.txt", "r");
+assert(f != NULL);
+</pre>
+  <p>Почему пример 1 можно писать, а пример 2 нельзя писать? Потому что в примере 1 мы ищем ошибку которая не должна произойти не когда. А в примере 2 ошибка может произойти. Аварийно завершать программу при наличии такой ошибки это неправильно. Такую ошибку можно проверить через условие if и выполнить какое-то другое действие.</p>
+
+  <h4>Заголовочный файл complex.h</h4>
+  <p>Содержит функции для операций с комплексными числами.</p>
+
+  <h4>Заголовочный файл ctype.h</h4>
+  <p>Содержит функции для проверки символа. Нарпимер, isalpha(), isdigit() и т.д.</p>
+
+  <h4>Заголовочный файл errno.h</h4>
+  <p>Есть соглашения об ошибках. Если функция не может выполниться, то она должна сообщить об ошибке. Сделать она это может одним из двух способов. Например, вернуть значение, которое сообщит нам об ошибке. Если функция должна вернуть указатель, но не может это сделать, то она возвращает NULL. Если функция должна вернуть положительное число, но не может это сделать, то она возвращает -1.</p>
+  <p>В заголовочном файле errno.h определена переменная int errno. Второй способ сообщить об ошибке, если функция записывает код ошибки в переменную errno.</p>
+
+  <h4>Заголовочный файл float.h</h4>
+  <p>Содержит константы с вещественными числами.</p>
+  <p>FLT_MAX это максимальное число, которое может хранить float</p>
+  <p>DBL_MAX это максимальное число, которое может хранить double</p>
+  <p>FLT_EPSILON и DBL_EPSILON нужны для сравнения дробных чисел</p>
+<pre>
+double a = f();
+double b = g();
+if (a == b) {} // так нельзя
+if (fabs(a-b) &lt; DBL_EPSILON) {} // так правильно
+</pre>
+
+  <h4>Заголовочный файл limits.h</h4>
+  <p>Содержит константы с целыми числами.</p>
+  <p>INT_MIN это минимальное число, которое может хранить int</p>
+  <p>INT_MAX это максимальное число, которое может хранить int</p>
+  <p>UINT_MAX это максимальное число, которое может хранить unsigned int</p>
+
+  <h4>Заголовочный файл inttypes.h</h4>
+  <p>На разных платформах размер типа данных int разный. Для 16 битный платформ это 2 байта, для 32 битных платформ это 4 байта, для 64 битных платформ это 8 байт</p>
+
+  <h4>Заголовочный файл math.h</h4>
+  <p>Содержит математические функции.</p>
+
+  <h4>Заголовочный файл stdlib.h</h4>
+  <p>Содержит функции преобразования типов atof(), atoi().</p>
+  <p>Содержит функции для генерации псевдослучайного числа. Функция srand() задает псевдослучайную последовательность, из которой будут доставаться по очереди числа. Функция rand() возвращает следующее число.</p>
+  <p>Функция srand(seed) принимает целое число seed и если это константа, то при каждом запуске программы будет генерироваться одна и та же последовательность. Чтобы последовательность всегда была разная, нужно передавать функции srand метку времени time(NULL). Поскольку время при каждом запуске программы разное, то и последовательности всегда будут разные.</p>
+  <p>Псевдослучайная последовательность является периодической, то есть с какого-то момента она начнет повторяться.</p>
+  <p>Содержит функции для выделения памяти malloc, calloc, realloc, free.</p>
+  <p>Содержит функцию exit(), которая аварийно завершает программу и может вернуть в операционную систему какое-то целое число.</p>
+  <p>Содержит функцию system(), которая позволяет запустить другую программу и проконтролировать с каким кодом она завершится.</p>
+  <p>Содержит функцию qsort() для быстрой сортировки.</p>
+  <p>Содержит функцию bsearch() для бинарного поиска в отсортированном массиве.</p>
+
+  <h4>Заголовочный файл string.h</h4>
+  <p>Содержит функции для работы со строками strchr, strlen, strcmp.</p>
+
+  <p>Функция strstr() ищет подстроку внутри строки. strstr(s1,s2) вернет NULL если не найдет подстроку s2 внутри строки s1. Или вернет указатель на первое вхождение подстроки s2 внутри строки s1 если оно там есть.</p>
+  <p>Функция strtok() разбивает строку по некоторым правилам. При вызове strtok принимает два параметра - строку, с которой будет работать и символ-разделитель. Если вместо строки передать NULL, то функция продолжает работать со строкой, с которой она вызывалась в прошлый раз. Возвращает часть строки до символа-разделителя.Символ разделитель может быть каждый раз разный или один и тот же.</p>
+<pre>
+char str[] = "This is a simple string";
+char *p;
+p = strtok(str, " ");
+while (p != NULL) {
+  printf("%s", p);
+  p = strtok(NULL, " ");
+}
+</pre>
+
+  <h4>Заголовочный файл time.h</h4>
+  <p>Функции для работы с временем. Тип данных time_t хранит число милисекунд. Функция time возвращает число милисекунд прошедших с 1 января 1970 года</p>
+<pre>
+time_t a;
+a = time(NULL);
+time(&a);
+</pre>
+  <p>Тип данных clock_t хранит чило тиков (единица процессорного времени). Функция clock возвращает число тиков, прошедших с момента запуска программы. С помощью функции clock можно замерить время выполнения кода в программе.</p>
+<pre>
+clock_t start = clock();
+f();
+clock_t finish = clock();
+clock_t diff = finish - start;
+</pre>
+
+  <h3>Три взгляда на ООП</h3>
+  <ol>
+    <li>
+      <h4>Исторический</h4>
+      <p>Размер программы становится больше. Программистов, которые пишут одну программу становится больше. Времени на написание одной программы становится меньше. При этом жертвуются ресурсы. Чем быстрее программист пишет программу, тем больше она занимает памяти и медленнее работает.</p>
+      <p>Машинный код -> ассемблер -> языки с ветвлениями и циклами -> группировка переменных в структурах -> группировка функций в классах</p>
+    </li>
+    <li>
+      <h4>Лингвистический</h4>
+      <p>Процедурные языки состоят из сказуемых: открой файл, нарисуй дом и т.д.</p>
+      <p>В ООП есть подлежащее и сказуемое: файл откройся, дом нарисуйся и т.д.</p>
+    </li>
+    <li>
+      <h4>Практический</h4>
+      <p>Хочу собирать программу из готовых модулей, которые друг с другом взаимодействуют.</p>
+    </li>
+  </ol>
+</article>
+
+
+<!-- Урок 6 -->
+<article class="article">
+  <div class="anchor" id="p6"></div>
+  <h3>Урок 6</h3>
+
+  <h4>Классы</h4>
+  <p>Создадим массив, поработаем с ним и удалим его.</p>
+<pre>
+int *a = new int[100];
+a[i] = 1;
+delete [] a;
+</pre>
+  <p>Какие проблемы могут быть при этом:</p>
+  <ol>
+    <li>можно забыть написать new</li>
+    <li>можно обратиться к несуществующему индексу</li>
+    <li>можно забыть написать delete</li>
+  </ol>
+  <p>Напишем класс, который решит за нас эти проблемы.</p>
+
+  <p>Файл array.h</p>
+<pre>
+#ifndef ARRAY_H_
+#define ARRAY_H_
+
+class Array {
+private:
+  size_t mySize;
+  int *myData;
+
+public:
+  Array(size_t size);
+  ~Array();
+  void set(int i, int val);
+  int get(int i);
+  size_t getSize();
+};
+#endif
+</pre>
+
+  <p>Файл array.cpp</p>
+<pre>
+#include "Array.h"
+
+Array::Array(size_t size) {
+  mySize = size;
+  myData = new int[mySize];
+}
+
+Array::~Array() {
+  delete [] myData;
+}
+
+void Array::set(int i. int val) {
+  if (i &lt; 0 || i > mySize - 1) {
+    return;
+  }
+  myData[i] = val;
+}
+
+size_t Array::get(int i) {
+  if (i &lt; 0 \\ i > mySeze - 1) {
+    return -1;
+  }
+  return myData[i];
+}
+
+void Array::getSize() {
+  return mySize;
+}
+</pre>
+
+  <p>Файл main.cpp</p>
+<pre>
+Array a(100);
+
+for (int i = 0; i &lt; a.getSize(); i++) {
+  a.set(i, 1);
+}
+</pre>
+
+  <h4>Проблема копирования и присваивания объектов</h4>
+  <p>Рассмотрим две проблемы. Первая. Мы хотим создать массив b, такой же как и массив a.</p>
+<pre>
+Array a(10);
+a.set(0, 5);
+Array b(a);
+</pre>
+  <p>Вторая. Мы создали массив b и хотив присвоить ему массив a.</p>
+<pre>
+Array a(10);
+Array b(20);
+b = a;
+</pre>
+  <p>Отличия этих проблем в том, что в первом случае массив b еще не существует, а во втором случае он уже есть.</p>
+
+  <h4>Конструктор копирования</h4>
+  <p>Конструктор копирования по умолчанию, который компилятор добавит сам, выглядит так:</p>
+<pre>
+Array::Array(Array &a) {
+  mySize = a.mySize;
+  myData = a.myData;
+}
+</pre>
+  <p>С конструктором по умолчанию есть проблемы. Он делает поверхностное копирование. Все указатели будут указывать на уже существующие области памяти и не будут создаваться новых. Если после этого вызывать деструкторы, то первый деструктор удалит память, а остальные будут пытаться удалить несуществующую память, что приведет к ошибке.</p>
+  <p>Если прописать конструктор копирования в приватной части класса, то он никогда не может быть вызван вне класса.</p>
+
+  <p>Файл array.h. Добавим свой конструктор копирования</p>
+<pre>
+public:
+  Array(Array &a);
+</pre>
+  <p>Файл array.cpp. Добавим свой конструктор копирования</p>
+<pre>
+Array::Array(Array &a) {
+  mySize = a.mySize;
+  myData = new int[mySize];
+  for (int i = 0; i &lt; mySize; i++) {
+    myData[i] = a.myData[i];
+  }
+}
+</pre>
+
+  <h4>Перегрузка оператора присваивания</h4>
+  <p>Для того чтобы с объектами можно было производить операции присваивания, нужно написать перегрузку оператора присваивания для класса.</p>
+
+  <p>Файл array.h. Добавим в класс перегрузку оператора присваивания.</p>
+<pre>
+public:
+  Array& operator=(Array &a);
+</pre>
+  <p>В языке C++ есть две эквивалентные записи b = a и b.operator=(a);</p>
+  <p>Файл array.cpp. Добавим свой оператор присваивания</p>
+<pre>
+Array& Array::operator=(Array &a) {
+  if (this != &a) {
+    mySize = a.mySize;
+    delete [] myData;
+    myData = new int[mySize];
+    for (int i = 0; i &lt; mySize; i++) {
+      myData[i] = a.myData[i];
+    }
+  }
+  return *this;
+}
+</pre>
+</article>
+
+
+<!-- Урок 7 -->
+<article class="article">
+  <div class="anchor" id="p7"></div>
+  <h3>Урок 7</h3>
 </article>
